# Ionia

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: combinator.ionia  cps.ionia  fib-tail.ionia  fib.ionia  list.ionia  yin-yang.ionia
make/: debian.make  macos.make
src/: main.cpp  version.h
src/back/: interpreter.cpp  interpreter.h
src/back/compiler/: compiler.cpp  compiler.h
src/back/interpreter/: interpreter.cpp  interpreter.h  repl.cpp  repl.h
src/define/: ast.cpp  ast.h  symbol.cpp  symbol.h  type.h
src/front/: lexer.cpp  lexer.h  parser.cpp  parser.h
src/util/: argparse.cpp  argparse.h  cast.h
src/vm/: codegen.cpp  codegen.h  define.h  disasm.cpp  disasm.h  vm.cpp  vm.h
